--- a/email.html
+++ b/email.html
@@ -53,6 +53,7 @@
       <div class="content">
         <p>We have received the following details:</p>
         <ul>
+          <li><strong>Product Name:</strong> {{productName}}</li>
           <li><strong>Full Name:</strong> {{fullName}}</li>
           <li><strong>Mobile Number:</strong> {{mobileNumber}}</li>
           <li><strong>Address:</strong> {{address}}</li>
